k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-rest-api-service
spec:
  selector:
    app: golang-rest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
